# programming-lightning-payment-channels

./: .gitignore  .replit  Cargo.toml  README.md  replit.md  replit.nix  start.sh
.bitcoin/: bitcoin.conf
.config/: bashrc
.tutorial/: 1.0-introduction.md  1.01-setup.md  1.01-welcome.md  1.02-aliases.md  1.02-bitcoin-cli.md  1.03-fairness-protocol.md  1.04-keys-manager.md  1.05-channel-keys.md  1.06-naive-scaling.md  1.07-payment-channels.md  1.08-refund-transaction.md  1.09-timeless-payment-channels.md  1.11-asymmetric-commits.md  1.12-revocable-transactions.md  1.13-revocable-transactions2.md  1.14-per-commitment-point.md  1.15-commitment-tx.md  1.16-obscured-commitments.md  1.17-asymmetric-commits.md  1.17.create-commitment-tx.md  1.18-get-commitment-tx.md  1.19-open-channel.md  1.20-lightning-network.md  1.21-htcl-intro.md  1.22-simple-htlc.md  1.23-HTLC-routing.md  1.24-update-HTLC-state.md  1.25-revoking-old-states.md  1.26-htlc-offerer.md  1.27-htlc-offerer-exercise.md  1.28-htlc-receiver.md  1.29-htlc-receiver-exercise.md  1.30-commitment-update.md  1.31-get-htlc-commitment.md  1.32-channel-keys-overview.md  1.32-get-htlc-timeout.md  1.33-closing-channels.md  1.33-commitment-keys-overview.md  xx0-introduction.md  xx1-keys-manager.md  (+28 more)
src/: main.rs
src/exercises/: signing.rs  transactions.txt  types.rs  workflows.rs
src/interactive/: commitment.rs  funding.rs  htlc.rs  htlc_timeout.rs  mod.rs  simple_htlc.rs  simple_htlc_claim.rs
src/internal/: bitcoind_client.rs  convert.rs  helper.rs  hex_utils.rs  mod.rs
src/solutions/: transactions.txt  types.rs  (+1 more)
(+31 files in other folders)
