[package]
name = "pl-00-intro"
version = "0.1.0"
edition = "2021"

[features]
default = []
use-solutions = []

[dependencies]
lightning-block-sync = { version = "0.0.125", features = ["rpc-client"], default-features = false }
bitcoin = "0.32"
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time", "full" ] }
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
sha2 = "0.10.8"
clap = { version = "4.4", features = ["derive"] }
ripemd = "0.1"
serial_test = "3.0"

[build-dependencies]
syn = { version = "1.0.107", features = ["parsing", "full","extra-traits"] }

[dev-dependencies]
serial_test = "3.0"

[profile.dev]
incremental = true
debug = false
opt-level = 0

[profile.test]
incremental = true
opt-level = 0
debug = false

[profile.release]
opt-level = 3
lto = false
codegen-units = 16